# theytclfr

./: .env.example  .gitignore  README.md  auth.py  build.md  context.md  decisions.md  diff.md  pyproject.toml  pytest_err.txt  scratch.py  scratch_append.py  test_aws_health.py  test_sanitize.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_router_decision.py  0003_extractor_results.py  0004_add_s3_video_uri.py  0005_aligned_segments_and_pgvector.py  0006_final_outputs.py
docs/: runbook.md
src/ytclfr/alignment/: __init__.py  deduplicator.py  engine.py  normalizer.py  overlap.py  segmenter.py
src/ytclfr/api/: __init__.py  auth.py  main.py  rate_limit.py
src/ytclfr/cache/: __init__.py  result_cache.py
src/ytclfr/confidence/: __init__.py  controller.py  policy.py  rules.py  scorer.py
src/ytclfr/contracts/: alignment.py  auth.py  events.py  extractor.py  output.py  router.py
src/ytclfr/core/: __init__.py  config.py  logging.py
src/ytclfr/db/: __init__.py  base.py  session.py
src/ytclfr/extractors/: asr.py  audio_classifier.py  base.py  ocr.py
src/ytclfr/ingestion/: __init__.py  downloader.py  metadata.py  s3_storage.py  temp_storage.py  validator.py
src/ytclfr/queue/: __init__.py  (+1 more)
tests/fixtures/: aligned_segment.json  extractor_result_asr.json  extractor_result_audio.json  extractor_result_ocr.json  final_output.json  router_decision.json  video_ingested_event.json
tests/integration/: __init__.py  test_alignment_integration.py  test_chaos.py  test_ingestion.py  test_migrations.py
v2/: build.md  claude.md  context.md  diff.md
(+61 files in other folders)
